--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
   "name": "cyber-stream-sdk",
-  "version": "1.0.1",
+  "version": "1.0.6",
   "description": "An SDK for exploring IMDB movies and shows.",
   "main": "dist/index.js",
-  "module": "dist/index.m.js",
-  "unpkg": "dist/index.umd.js",
-  "types": "dist/index.d.ts",
-  "exports": {
-    "require": "./dist/index.js",
-    "default": "./dist/index.modern.js"
-  },
   "scripts": {
-    "build": "rm -rf dist && microbundle --tsconfig tsconfig.json --no-sourcemap",
-    "dev": "microbundle --watch --tsconfig tsconfig.json --no-sourcemap"
+    "build": "rm -rf dist && tsup src/index.ts && tsc --emitDeclarationOnly --declaration --declarationMap"
   },
-  "keywords": [],
-  "author": "tomideadeoye",
+  "keywords": [
+    "cyber",
+    "stream",
+    "movie",
+    "show"
+  ],
+  "author": "tomide adeoye",
   "license": "MIT",
   "devDependencies": {
-    "microbundle": "0.15.0"
+    "tsup": "^8.0.2"
   },
   "dependencies": {
-    "isomorphic-unfetch": "^3.1.0",
     "typescript": "^5.0.4"
   },
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ]
