--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cyber-stream-sdk",
-  "version": "1.0.6",
+  "version": "1.0.9",
   "description": "An SDK for exploring IMDB movies and shows.",
   "main": "dist/index.js",
   "scripts": {
@@ -10,7 +10,8 @@
     "cyber",
     "stream",
     "movie",
-    "show"
+    "show",
+    "imdb"
   ],
   "author": "tomide adeoye",
   "license": "MIT",
